@@ -1,3 +1,7 @@
+2005-03-07  Edi Weitz  <edi@agharta.de>
+
+	* swank.lisp: Fixed parenthesis-balancing problem.
+
 2005-03-06  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>
 
 	* slime.el (slime-easy-menu): Add menu item for
